# SSH

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  init.bat  main.cpp  main.py  requirements.txt  test.py  uninstall.bat
SSH/config/: config.json
SSH/img_js/: 1742681050.json  1742684145.json
include/: ElaWidgetTools.qrc
lib/: ElaPacketIO.lib  ElaWidgetTools.lib
lib/cmake/: ElaPacketIOConfig.cmake
pages/: AIPage.cpp  AIPage.h  BasePage.cpp  BasePage.h  HomePage.cpp  HomePage.h  SettingPage.cpp  SettingPage.h  UserInfoPage.cpp  UserInfoPage.h  WQBPage.cpp  WQBPage.h
ui/: AddItemWindow.py  AddItemWindow.ui  MainWindow.py  MainWindow.ui  SettingWindow.py  SettingWindow.ui  TimeRunOutWindow.py  TimeRunOutWindow.ui  WQbWindow.py  WQbWindow.ui
unit/: image_process.py  send_mail.py
units/: MyConfig.cpp  MyConfig.h  config.hpp  send_email.hpp  test.hpp
